@@ -1,5 +1,5 @@
 Package: mirt
-Version: 0.4.1
+Version: 0.4.1-1
 Date: 2012-10-19
 Type: Package
 Title: Multidimensional Item Response Theory
